--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   db:
-    image: postgres:11.1-alpine
+    image: postgres:9.6
     environment:
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
@@ -11,7 +11,7 @@ services:
       - ${POSTGRES_DATA}:/var/lib/postgresql/data
     container_name: ${POSTGRES_CONTAINER_NAME}
     ports:
-     - ${POSTGRES_PORT}:3306
+     - ${POSTGRES_PORT}:5432
   web:
     build: .
     command: bin/rails s -p 3000 -b '0.0.0.0'
@@ -25,6 +25,3 @@ services:
       RAILS_ENV: development
       DATABASE_URL: postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@db/${DATABASE_NAME}_development
     container_name: ${WEB_CONTAINER_NAME}
-
-volumes:
-  pgdata:
